updated version with fixes

--- a/notebooks/06_Recomendacoes_Review.ipynb
+++ b/notebooks/06_Recomendacoes_Review.ipynb
@@ -67,10 +67,10 @@
      "output_type": "stream",
      "text": [
       "Clusters identificados:\n",
-      "  Cluster 0: Endividados Severos       |  59 usuários | Taxa: -88.6%\n",
-      "  Cluster 1: Em Alerta                 | 196 usuários | Taxa: -14.8%\n",
-      "  Cluster 2: Endividados Moderados     | 167 usuários | Taxa: -57.7%\n",
-      "  Cluster 3: Poupadores                |  78 usuários | Taxa: +25.4%\n"
+      "  Cluster 0: Endividados Moderados     |  86 usuários | Taxa: -36.8%\n",
+      "  Cluster 1: Em Alerta                 | 228 usuários | Taxa: -24.6%\n",
+      "  Cluster 2: Endividados Severos       | 112 usuários | Taxa: -79.7%\n",
+      "  Cluster 3: Poupadores                |  74 usuários | Taxa: +26.0%\n"
      ]
     }
    ],
@@ -184,67 +184,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Em Alerta</th>\n",
-       "      <td>673.04</td>\n",
-       "      <td>306.75</td>\n",
-       "      <td>187.11</td>\n",
-       "      <td>653.22</td>\n",
-       "      <td>448.00</td>\n",
-       "      <td>114.80</td>\n",
-       "      <td>113.96</td>\n",
-       "      <td>75.36</td>\n",
-       "      <td>3827.09</td>\n",
-       "      <td>267.59</td>\n",
-       "      <td>115.28</td>\n",
-       "      <td>359.57</td>\n",
-       "      <td>154.14</td>\n",
+       "      <td>740.83</td>\n",
+       "      <td>297.73</td>\n",
+       "      <td>198.60</td>\n",
+       "      <td>705.27</td>\n",
+       "      <td>482.63</td>\n",
+       "      <td>123.93</td>\n",
+       "      <td>118.07</td>\n",
+       "      <td>78.73</td>\n",
+       "      <td>3745.29</td>\n",
+       "      <td>285.36</td>\n",
+       "      <td>124.15</td>\n",
+       "      <td>412.20</td>\n",
+       "      <td>153.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Endividados Moderados</th>\n",
-       "      <td>974.76</td>\n",
-       "      <td>432.53</td>\n",
-       "      <td>258.56</td>\n",
-       "      <td>887.82</td>\n",
-       "      <td>620.84</td>\n",
-       "      <td>159.82</td>\n",
-       "      <td>167.86</td>\n",
-       "      <td>103.98</td>\n",
-       "      <td>3836.17</td>\n",
-       "      <td>365.78</td>\n",
-       "      <td>158.67</td>\n",
-       "      <td>562.13</td>\n",
-       "      <td>207.73</td>\n",
+       "      <td>786.69</td>\n",
+       "      <td>491.56</td>\n",
+       "      <td>224.28</td>\n",
+       "      <td>706.01</td>\n",
+       "      <td>524.08</td>\n",
+       "      <td>137.32</td>\n",
+       "      <td>167.05</td>\n",
+       "      <td>100.47</td>\n",
+       "      <td>3853.24</td>\n",
+       "      <td>311.31</td>\n",
+       "      <td>140.23</td>\n",
+       "      <td>455.58</td>\n",
+       "      <td>217.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Endividados Severos</th>\n",
-       "      <td>1357.74</td>\n",
-       "      <td>619.91</td>\n",
-       "      <td>381.36</td>\n",
-       "      <td>1540.41</td>\n",
-       "      <td>919.11</td>\n",
-       "      <td>235.83</td>\n",
-       "      <td>232.53</td>\n",
-       "      <td>155.41</td>\n",
-       "      <td>4575.24</td>\n",
-       "      <td>555.73</td>\n",
-       "      <td>229.91</td>\n",
-       "      <td>775.61</td>\n",
-       "      <td>294.00</td>\n",
+       "      <td>1269.15</td>\n",
+       "      <td>541.43</td>\n",
+       "      <td>345.97</td>\n",
+       "      <td>1313.99</td>\n",
+       "      <td>825.03</td>\n",
+       "      <td>209.66</td>\n",
+       "      <td>212.49</td>\n",
+       "      <td>135.45</td>\n",
+       "      <td>4434.42</td>\n",
+       "      <td>500.24</td>\n",
+       "      <td>204.82</td>\n",
+       "      <td>697.58</td>\n",
+       "      <td>260.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Poupadores</th>\n",
-       "      <td>1027.50</td>\n",
-       "      <td>472.94</td>\n",
-       "      <td>287.32</td>\n",
-       "      <td>948.24</td>\n",
-       "      <td>682.68</td>\n",
-       "      <td>170.35</td>\n",
-       "      <td>170.53</td>\n",
-       "      <td>116.82</td>\n",
-       "      <td>8009.04</td>\n",
-       "      <td>401.48</td>\n",
-       "      <td>181.05</td>\n",
-       "      <td>564.59</td>\n",
-       "      <td>212.20</td>\n",
+       "      <td>1030.32</td>\n",
+       "      <td>473.29</td>\n",
+       "      <td>289.84</td>\n",
+       "      <td>979.17</td>\n",
+       "      <td>695.30</td>\n",
+       "      <td>173.59</td>\n",
+       "      <td>166.28</td>\n",
+       "      <td>116.96</td>\n",
+       "      <td>8154.55</td>\n",
+       "      <td>402.37</td>\n",
+       "      <td>182.06</td>\n",
+       "      <td>579.21</td>\n",
+       "      <td>214.11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -253,31 +253,31 @@
       "text/plain": [
        "categoria              Alimentacao_Casa  Alimentacao_Fora  Educacao  \\\n",
        "cluster_nome                                                          \n",
-       "Em Alerta                        673.04            306.75    187.11   \n",
-       "Endividados Moderados            974.76            432.53    258.56   \n",
-       "Endividados Severos             1357.74            619.91    381.36   \n",
-       "Poupadores                      1027.50            472.94    287.32   \n",
+       "Em Alerta                        740.83            297.73    198.60   \n",
+       "Endividados Moderados            786.69            491.56    224.28   \n",
+       "Endividados Severos             1269.15            541.43    345.97   \n",
+       "Poupadores                      1030.32            473.29    289.84   \n",
        "\n",
        "categoria              Habitacao_Aluguel  Habitacao_Contas  Higiene_Limpeza  \\\n",
        "cluster_nome                                                                  \n",
-       "Em Alerta                         653.22            448.00           114.80   \n",
-       "Endividados Moderados             887.82            620.84           159.82   \n",
-       "Endividados Severos              1540.41            919.11           235.83   \n",
-       "Poupadores                        948.24            682.68           170.35   \n",
+       "Em Alerta                         705.27            482.63           123.93   \n",
+       "Endividados Moderados             706.01            524.08           137.32   \n",
+       "Endividados Severos              1313.99            825.03           209.66   \n",
+       "Poupadores                        979.17            695.30           173.59   \n",
        "\n",
        "categoria               Lazer  Outros    Renda   Saude  Telecomunicacoes  \\\n",
        "cluster_nome                                                               \n",
-       "Em Alerta              113.96   75.36  3827.09  267.59            115.28   \n",
-       "Endividados Moderados  167.86  103.98  3836.17  365.78            158.67   \n",
-       "Endividados Severos    232.53  155.41  4575.24  555.73            229.91   \n",
-       "Poupadores             170.53  116.82  8009.04  401.48            181.05   \n",
+       "Em Alerta              118.07   78.73  3745.29  285.36            124.15   \n",
+       "Endividados Moderados  167.05  100.47  3853.24  311.31            140.23   \n",
+       "Endividados Severos    212.49  135.45  4434.42  500.24            204.82   \n",
+       "Poupadores             166.28  116.96  8154.55  402.37            182.06   \n",
        "\n",
        "categoria              Transporte  Vestuario  \n",
        "cluster_nome                                  \n",
-       "Em Alerta                  359.57     154.14  \n",
-       "Endividados Moderados      562.13     207.73  \n",
-       "Endividados Severos        775.61     294.00  \n",
-       "Poupadores                 564.59     212.20  "
+       "Em Alerta                  412.20     153.69  \n",
+       "Endividados Moderados      455.58     217.81  \n",
+       "Endividados Severos        697.58     260.55  \n",
+       "Poupadores                 579.21     214.11  "
       ]
      },
      "execution_count": 3,
@@ -401,24 +401,24 @@
       "(gasto mensal médio por usuário)\n",
       "\n",
       "EM ALERTA:\n",
-      "  1. Reduzir Alimentacao_Fora: R$ 306.75/mês\n",
-      "  2. Reduzir Vestuario: R$ 154.14/mês\n",
-      "  3. Reduzir Lazer: R$ 113.96/mês\n",
+      "  1. Reduzir Alimentacao_Fora: R$ 297.73/mês\n",
+      "  2. Reduzir Vestuario: R$ 153.69/mês\n",
+      "  3. Reduzir Lazer: R$ 118.07/mês\n",
       "\n",
       "ENDIVIDADOS MODERADOS:\n",
-      "  1. Reduzir Alimentacao_Fora: R$ 432.53/mês\n",
-      "  2. Reduzir Vestuario: R$ 207.73/mês\n",
-      "  3. Reduzir Lazer: R$ 167.86/mês\n",
+      "  1. Reduzir Alimentacao_Fora: R$ 491.56/mês\n",
+      "  2. Reduzir Vestuario: R$ 217.81/mês\n",
+      "  3. Reduzir Lazer: R$ 167.05/mês\n",
       "\n",
       "ENDIVIDADOS SEVEROS:\n",
-      "  1. Reduzir Alimentacao_Fora: R$ 619.91/mês\n",
-      "  2. Reduzir Vestuario: R$ 294.00/mês\n",
-      "  3. Reduzir Lazer: R$ 232.53/mês\n",
+      "  1. Reduzir Alimentacao_Fora: R$ 541.43/mês\n",
+      "  2. Reduzir Vestuario: R$ 260.55/mês\n",
+      "  3. Reduzir Lazer: R$ 212.49/mês\n",
       "\n",
       "POUPADORES:\n",
-      "  1. Reduzir Alimentacao_Fora: R$ 472.94/mês\n",
-      "  2. Reduzir Vestuario: R$ 212.20/mês\n",
-      "  3. Reduzir Lazer: R$ 170.53/mês\n"
+      "  1. Reduzir Alimentacao_Fora: R$ 473.29/mês\n",
+      "  2. Reduzir Vestuario: R$ 214.11/mês\n",
+      "  3. Reduzir Lazer: R$ 166.28/mês\n"
      ]
     }
    ],
@@ -463,6 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Métricas calculadas: Silhouette=0.2672, Davies-Bouldin=1.1839\n",
       "Entregavel salvo: ../outputs/Sprint1_Review.md\n",
       "\n",
       "==================================================\n",
@@ -485,14 +486,14 @@
       "\n",
       "| Metrica | Target | Resultado | Status |\n",
       "|---------|--------|-----------|--------|\n",
-      "| Silhouette Score | > 0.5 | 0.2568 | NAO ATINGIDO |\n",
-      "| Davies-Bouldin Index | < 1.0 | 1.1959 | NAO ATINGIDO |\n",
+      "| Silhouette Score | > 0.5 | 0.2672 | NAO ATINGIDO |\n",
+      "| Davies-Bouldin Index | < 1.0 | 1.1839 | NAO ATINGIDO |\n",
       "| Clusters interpretaveis | Sim | Sim | ATINGIDO |\n",
       "\n",
       "### Analise\n",
       "\n",
-      "- **Silhouette Score (0.26)**: Abaixo do target (0.5), indicando sobreposicao entre clusters\n",
-      "- **Davies-Bouldin (1.20)**: Acima do target (1.0), confirmando clusters nao bem separados\n",
+      "- **Silhouette Score (0.27)**: Abaixo do target (0.5), indicando sobreposicao entre clusters\n",
+      "- **Davies-Bouldin (1.18)**: Acima do target (1.0), confirmando clusters nao bem separados\n",
       "- **Interpretabilidade**: Apesar das metricas, os 4 clusters sao claramente interpretaveis com perfis distintos de risco financeiro\n",
       "\n",
       "### Decisao\n",
@@ -513,10 +514,10 @@
       "\n",
       "## Perfis Identificados\n",
       "\n",
-      "- **Endividados Severos**: 59 usuarios (-88.6% poupanca)\n",
-      "- **Endividados Moderados**: 167 usuarios (-57.7% poupanca)\n",
-      "- **Em Alerta**: 196 usuarios (-14.8% poupanca)\n",
-      "- **Poupadores**: 78 usuarios (+25.4% poupanca)\n",
+      "- **Endividados Severos**: 112 usuarios (-79.7% poupanca)\n",
+      "- **Endividados Moderados**: 86 usuarios (-36.8% poupanca)\n",
+      "- **Em Alerta**: 228 usuarios (-24.6% poupanca)\n",
+      "- **Poupadores**: 74 usuarios (+26.0% poupanca)\n",
       "\n",
       "## Top 3 Categorias para Economia\n",
       "\n",
@@ -555,11 +556,25 @@
     "usuarios_risco = len(usuarios_cluster[usuarios_cluster['taxa_poupanca'] < 0])\n",
     "taxa_media = usuarios_cluster['taxa_poupanca'].mean() * 100\n",
     "\n",
-    "# Métricas de validação H2\n",
-    "silhouette_score = 0.2568\n",
-    "davies_bouldin = 1.1959\n",
+    "# Calcular métricas de validação H2 dinamicamente\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import silhouette_score as calc_silhouette, davies_bouldin_score\n",
+    "\n",
+    "features = ['media_renda', 'media_gasto', 'taxa_poupanca', 'pct_gastos_essenciais', 'std_gasto']\n",
+    "X = usuarios_cluster[features]\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "silhouette_score = calc_silhouette(X_scaled, usuarios_cluster['cluster'])\n",
+    "davies_bouldin = davies_bouldin_score(X_scaled, usuarios_cluster['cluster'])\n",
+    "\n",
     "silhouette_target = 0.5\n",
     "db_target = 1.0\n",
+    "\n",
+    "silhouette_status = \"ATINGIDO\" if silhouette_score > silhouette_target else \"NAO ATINGIDO\"\n",
+    "db_status = \"ATINGIDO\" if davies_bouldin < db_target else \"NAO ATINGIDO\"\n",
+    "\n",
+    "print(f\"Métricas calculadas: Silhouette={silhouette_score:.4f}, Davies-Bouldin={davies_bouldin:.4f}\")\n",
     "\n",
     "# Gerar markdown\n",
     "review_md = f\"\"\"# Sprint 1 Review - Economiza+ MVP\n",
@@ -579,14 +594,14 @@
     "\n",
     "| Metrica | Target | Resultado | Status |\n",
     "|---------|--------|-----------|--------|\n",
-    "| Silhouette Score | > {silhouette_target} | {silhouette_score:.4f} | NAO ATINGIDO |\n",
-    "| Davies-Bouldin Index | < {db_target} | {davies_bouldin:.4f} | NAO ATINGIDO |\n",
+    "| Silhouette Score | > {silhouette_target} | {silhouette_score:.4f} | {silhouette_status} |\n",
+    "| Davies-Bouldin Index | < {db_target} | {davies_bouldin:.4f} | {db_status} |\n",
     "| Clusters interpretaveis | Sim | Sim | ATINGIDO |\n",
     "\n",
     "### Analise\n",
     "\n",
-    "- **Silhouette Score ({silhouette_score:.2f})**: Abaixo do target ({silhouette_target}), indicando sobreposicao entre clusters\n",
-    "- **Davies-Bouldin ({davies_bouldin:.2f})**: Acima do target ({db_target}), confirmando clusters nao bem separados\n",
+    "- **Silhouette Score ({silhouette_score:.2f})**: {\"Acima\" if silhouette_score > silhouette_target else \"Abaixo\"} do target ({silhouette_target}), indicando {\"boa separacao\" if silhouette_score > silhouette_target else \"sobreposicao\"} entre clusters\n",
+    "- **Davies-Bouldin ({davies_bouldin:.2f})**: {\"Abaixo\" if davies_bouldin < db_target else \"Acima\"} do target ({db_target}), {\"confirmando boa separacao\" if davies_bouldin < db_target else \"confirmando clusters nao bem separados\"}\n",
     "- **Interpretabilidade**: Apesar das metricas, os 4 clusters sao claramente interpretaveis com perfis distintos de risco financeiro\n",
     "\n",
     "### Decisao\n",
