--- a/notebooks/07_Recomendacoes_Sistema.ipynb
+++ b/notebooks/07_Recomendacoes_Sistema.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,10 +51,10 @@
       "\n",
       "Distribuição de Clusters:\n",
       "cluster\n",
-      "0     59\n",
-      "1    196\n",
-      "2    167\n",
-      "3     78\n",
+      "0     86\n",
+      "1    228\n",
+      "2    112\n",
+      "3     74\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,21 +181,21 @@
      "text": [
       "\n",
       "=== GASTO MÉDIO MENSAL POR CATEGORIA NÃO ESSENCIAL (R$/mês) ===\n",
-      "                  Endividados Severos  Em Alerta  Endividados Moderados  Poupadores\n",
+      "                  Endividados Moderados  Em Alerta  Endividados Severos  Poupadores\n",
       "categoria                                                                          \n",
-      "Alimentacao_Fora            R$ 619.91  R$ 306.75              R$ 432.53   R$ 472.94\n",
-      "Lazer                       R$ 232.53  R$ 113.96              R$ 167.86   R$ 170.53\n",
-      "Outros                      R$ 155.41   R$ 75.36              R$ 103.98   R$ 116.82\n",
-      "Vestuario                   R$ 294.00  R$ 154.14              R$ 207.73   R$ 212.20\n"
+      "Alimentacao_Fora              R$ 491.56  R$ 297.73            R$ 541.43   R$ 473.29\n",
+      "Lazer                         R$ 167.05  R$ 118.07            R$ 212.49   R$ 166.28\n",
+      "Outros                        R$ 100.47   R$ 78.73            R$ 135.45   R$ 116.96\n",
+      "Vestuario                     R$ 217.81  R$ 153.69            R$ 260.55   R$ 214.11\n"
      ]
     }
    ],
    "source": [
-    "# Nomes dos clusters\n",
+    "# Nomes dos clusters (CORRIGIDO em 29/01/2026)\n",
     "NOMES_CLUSTERS = {\n",
-    "    0: 'Endividados Severos',\n",
+    "    0: 'Endividados Moderados',\n",
     "    1: 'Em Alerta',\n",
-    "    2: 'Endividados Moderados',\n",
+    "    2: 'Endividados Severos',\n",
     "    3: 'Poupadores'\n",
     "}\n",
     "\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,21 +224,21 @@
       "\n",
       "=== TOP 2 CATEGORIAS NÃO ESSENCIAIS POR CLUSTER ===\n",
       "\n",
-      "Cluster 0 - Endividados Severos:\n",
-      "  Alimentacao_Fora: R$ 619.91/mês\n",
-      "  Vestuario: R$ 294.00/mês\n",
+      "Cluster 0 - Endividados Moderados:\n",
+      "  Alimentacao_Fora: R$ 491.56/mês\n",
+      "  Vestuario: R$ 217.81/mês\n",
       "\n",
       "Cluster 1 - Em Alerta:\n",
-      "  Alimentacao_Fora: R$ 306.75/mês\n",
-      "  Vestuario: R$ 154.14/mês\n",
+      "  Alimentacao_Fora: R$ 297.73/mês\n",
+      "  Vestuario: R$ 153.69/mês\n",
       "\n",
-      "Cluster 2 - Endividados Moderados:\n",
-      "  Alimentacao_Fora: R$ 432.53/mês\n",
-      "  Vestuario: R$ 207.73/mês\n",
+      "Cluster 2 - Endividados Severos:\n",
+      "  Alimentacao_Fora: R$ 541.43/mês\n",
+      "  Vestuario: R$ 260.55/mês\n",
       "\n",
       "Cluster 3 - Poupadores:\n",
-      "  Alimentacao_Fora: R$ 472.94/mês\n",
-      "  Vestuario: R$ 212.20/mês\n"
+      "  Alimentacao_Fora: R$ 473.29/mês\n",
+      "  Vestuario: R$ 214.11/mês\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,31 +279,31 @@
     }
    ],
    "source": [
-    "# Definir regras de recomendação\n",
+    "# Definir regras de recomendação (CORRIGIDO em 29/01/2026)\n",
     "# Estrutura: categoria, percentual_reducao, mensagem\n",
     "\n",
     "REGRAS_RECOMENDACAO = {\n",
-    "    0: {  # Endividados Severos - cortes drásticos\n",
-    "        'nome': 'Endividados Severos',\n",
-    "        'prioridade': 'CRÍTICA',\n",
+    "    0: {  # Endividados Moderados - cortes significativos\n",
+    "        'nome': 'Endividados Moderados',\n",
+    "        'prioridade': 'ALTA',\n",
     "        'regras': [\n",
     "            {\n",
     "                'id': 'R0_1',\n",
     "                'categoria': 'Alimentacao_Fora',\n",
     "                'acao': 'reducao',\n",
-    "                'percentual': 0.70,\n",
-    "                'titulo': 'Cortar refeições fora de casa',\n",
-    "                'mensagem': 'Reduza drasticamente refeições fora de casa. Priorize marmitas e cozinhar em casa.',\n",
-    "                'dica': 'Planeje cardápio semanal e faça compras com lista'\n",
+    "                'percentual': 0.50,\n",
+    "                'titulo': 'Reduzir significativamente refeições fora',\n",
+    "                'mensagem': 'Reduza refeições fora de casa pela metade.',\n",
+    "                'dica': 'Cozinhe em maior quantidade no fim de semana para a semana toda'\n",
     "            },\n",
     "            {\n",
     "                'id': 'R0_2',\n",
     "                'categoria': 'Vestuario',\n",
-    "                'acao': 'eliminacao',\n",
-    "                'percentual': 0.90,\n",
-    "                'titulo': 'Suspender compras de vestuário',\n",
-    "                'mensagem': 'Suspenda compras de roupas não essenciais por 3 meses.',\n",
-    "                'dica': 'Revise o guarda-roupa e conserte peças antes de comprar novas'\n",
+    "                'acao': 'reducao',\n",
+    "                'percentual': 0.50,\n",
+    "                'titulo': 'Cortar gastos com vestuário',\n",
+    "                'mensagem': 'Reduza compras de roupas pela metade.',\n",
+    "                'dica': 'Compre apenas itens essenciais e aproveite promoções'\n",
     "            }\n",
     "        ]\n",
     "    },\n",
@@ -331,27 +331,27 @@
     "            }\n",
     "        ]\n",
     "    },\n",
-    "    2: {  # Endividados Moderados - cortes significativos\n",
-    "        'nome': 'Endividados Moderados',\n",
-    "        'prioridade': 'ALTA',\n",
+    "    2: {  # Endividados Severos - cortes drásticos\n",
+    "        'nome': 'Endividados Severos',\n",
+    "        'prioridade': 'CRÍTICA',\n",
     "        'regras': [\n",
     "            {\n",
     "                'id': 'R2_1',\n",
     "                'categoria': 'Alimentacao_Fora',\n",
     "                'acao': 'reducao',\n",
-    "                'percentual': 0.50,\n",
-    "                'titulo': 'Reduzir significativamente refeições fora',\n",
-    "                'mensagem': 'Reduza refeições fora de casa pela metade.',\n",
-    "                'dica': 'Cozinhe em maior quantidade no fim de semana para a semana toda'\n",
+    "                'percentual': 0.70,\n",
+    "                'titulo': 'Cortar refeições fora de casa',\n",
+    "                'mensagem': 'Reduza drasticamente refeições fora de casa. Priorize marmitas e cozinhar em casa.',\n",
+    "                'dica': 'Planeje cardápio semanal e faça compras com lista'\n",
     "            },\n",
     "            {\n",
     "                'id': 'R2_2',\n",
     "                'categoria': 'Vestuario',\n",
-    "                'acao': 'reducao',\n",
-    "                'percentual': 0.50,\n",
-    "                'titulo': 'Cortar gastos com vestuário',\n",
-    "                'mensagem': 'Reduza compras de roupas pela metade.',\n",
-    "                'dica': 'Compre apenas itens essenciais e aproveite promoções'\n",
+    "                'acao': 'eliminacao',\n",
+    "                'percentual': 0.90,\n",
+    "                'titulo': 'Suspender compras de vestuário',\n",
+    "                'mensagem': 'Suspenda compras de roupas não essenciais por 3 meses.',\n",
+    "                'dica': 'Revise o guarda-roupa e conserte peças antes de comprar novas'\n",
     "            }\n",
     "        ]\n",
     "    },\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -399,20 +399,20 @@
       "REGRAS DE RECOMENDAÇÃO POR CLUSTER\n",
       "======================================================================\n",
       "\n",
-      "### Cluster 0: Endividados Severos (Prioridade: CRÍTICA)\n",
+      "### Cluster 0: Endividados Moderados (Prioridade: ALTA)\n",
       "--------------------------------------------------\n",
       "\n",
-      "  Regra 1: Cortar refeições fora de casa\n",
+      "  Regra 1: Reduzir significativamente refeições fora\n",
       "  Categoria: Alimentacao_Fora\n",
-      "  Ação: reducao (70%)\n",
-      "  Mensagem: Reduza drasticamente refeições fora de casa. Priorize marmitas e cozinhar em casa.\n",
-      "  Dica: Planeje cardápio semanal e faça compras com lista\n",
+      "  Ação: reducao (50%)\n",
+      "  Mensagem: Reduza refeições fora de casa pela metade.\n",
+      "  Dica: Cozinhe em maior quantidade no fim de semana para a semana toda\n",
       "\n",
-      "  Regra 2: Suspender compras de vestuário\n",
+      "  Regra 2: Cortar gastos com vestuário\n",
       "  Categoria: Vestuario\n",
-      "  Ação: eliminacao (90%)\n",
-      "  Mensagem: Suspenda compras de roupas não essenciais por 3 meses.\n",
-      "  Dica: Revise o guarda-roupa e conserte peças antes de comprar novas\n",
+      "  Ação: reducao (50%)\n",
+      "  Mensagem: Reduza compras de roupas pela metade.\n",
+      "  Dica: Compre apenas itens essenciais e aproveite promoções\n",
       "\n",
       "### Cluster 1: Em Alerta (Prioridade: MODERADA)\n",
       "--------------------------------------------------\n",
@@ -429,20 +429,20 @@
       "  Mensagem: Defina um limite mensal para gastos com lazer.\n",
       "  Dica: Busque alternativas gratuitas: parques, eventos culturais, bibliotecas\n",
       "\n",
-      "### Cluster 2: Endividados Moderados (Prioridade: ALTA)\n",
+      "### Cluster 2: Endividados Severos (Prioridade: CRÍTICA)\n",
       "--------------------------------------------------\n",
       "\n",
-      "  Regra 1: Reduzir significativamente refeições fora\n",
+      "  Regra 1: Cortar refeições fora de casa\n",
       "  Categoria: Alimentacao_Fora\n",
-      "  Ação: reducao (50%)\n",
-      "  Mensagem: Reduza refeições fora de casa pela metade.\n",
-      "  Dica: Cozinhe em maior quantidade no fim de semana para a semana toda\n",
+      "  Ação: reducao (70%)\n",
+      "  Mensagem: Reduza drasticamente refeições fora de casa. Priorize marmitas e cozinhar em casa.\n",
+      "  Dica: Planeje cardápio semanal e faça compras com lista\n",
       "\n",
-      "  Regra 2: Cortar gastos com vestuário\n",
+      "  Regra 2: Suspender compras de vestuário\n",
       "  Categoria: Vestuario\n",
-      "  Ação: reducao (50%)\n",
-      "  Mensagem: Reduza compras de roupas pela metade.\n",
-      "  Dica: Compre apenas itens essenciais e aproveite promoções\n",
+      "  Ação: eliminacao (90%)\n",
+      "  Mensagem: Suspenda compras de roupas não essenciais por 3 meses.\n",
+      "  Dica: Revise o guarda-roupa e conserte peças antes de comprar novas\n",
       "\n",
       "### Cluster 3: Poupadores (Prioridade: BAIXA)\n",
       "--------------------------------------------------\n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -587,19 +587,19 @@
       "TESTE: RECOMENDAÇÕES PARA 1 USUÁRIO DE CADA CLUSTER\n",
       "======================================================================\n",
       "\n",
-      "### Endividados Severos (Prioridade: CRÍTICA)\n",
-      "Usuário: user_0002\n",
+      "### Endividados Moderados (Prioridade: ALTA)\n",
+      "Usuário: user_0011\n",
       "--------------------------------------------------\n",
       "\n",
-      "  Recomendação 1: Cortar refeições fora de casa\n",
-      "  Gasto atual: R$ 737.54/mês\n",
-      "  Economia potencial: R$ 516.28/mês (70%)\n",
+      "  Recomendação 1: Reduzir significativamente refeições fora\n",
+      "  Gasto atual: R$ 513.63/mês\n",
+      "  Economia potencial: R$ 256.81/mês (50%)\n",
       "\n",
-      "  Recomendação 2: Suspender compras de vestuário\n",
-      "  Gasto atual: R$ 362.20/mês\n",
-      "  Economia potencial: R$ 325.98/mês (90%)\n",
+      "  Recomendação 2: Cortar gastos com vestuário\n",
+      "  Gasto atual: R$ 276.59/mês\n",
+      "  Economia potencial: R$ 138.30/mês (50%)\n",
       "\n",
-      "  >>> ECONOMIA TOTAL: R$ 842.26/mês\n",
+      "  >>> ECONOMIA TOTAL: R$ 395.11/mês\n",
       "\n",
       "### Em Alerta (Prioridade: MODERADA)\n",
       "Usuário: user_0004\n",
@@ -615,19 +615,19 @@
       "\n",
       "  >>> ECONOMIA TOTAL: R$ 168.18/mês\n",
       "\n",
-      "### Endividados Moderados (Prioridade: ALTA)\n",
-      "Usuário: user_0008\n",
+      "### Endividados Severos (Prioridade: CRÍTICA)\n",
+      "Usuário: user_0002\n",
       "--------------------------------------------------\n",
       "\n",
-      "  Recomendação 1: Reduzir significativamente refeições fora\n",
-      "  Gasto atual: R$ 740.65/mês\n",
-      "  Economia potencial: R$ 370.32/mês (50%)\n",
+      "  Recomendação 1: Cortar refeições fora de casa\n",
+      "  Gasto atual: R$ 737.54/mês\n",
+      "  Economia potencial: R$ 516.28/mês (70%)\n",
       "\n",
-      "  Recomendação 2: Cortar gastos com vestuário\n",
-      "  Gasto atual: R$ 252.90/mês\n",
-      "  Economia potencial: R$ 126.45/mês (50%)\n",
+      "  Recomendação 2: Suspender compras de vestuário\n",
+      "  Gasto atual: R$ 362.20/mês\n",
+      "  Economia potencial: R$ 325.98/mês (90%)\n",
       "\n",
-      "  >>> ECONOMIA TOTAL: R$ 496.77/mês\n",
+      "  >>> ECONOMIA TOTAL: R$ 842.26/mês\n",
       "\n",
       "### Poupadores (Prioridade: BAIXA)\n",
       "Usuário: user_0001\n",
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -756,37 +756,31 @@
       "\n",
       "======================================================================\n",
       "RESUMO: ECONOMIA POTENCIAL POR CLUSTER\n",
-      "======================================================================\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "======================================================================\n",
       "\n",
-      "Cluster 0: Endividados Severos\n",
-      "  Usuários: 59\n",
-      "  Economia média: R$ 698.53/mês\n",
-      "  Economia total (cluster): R$ 41213.48/mês\n",
-      "  Range: R$ 369.12 - R$ 1431.23\n",
+      "Cluster 0: Endividados Moderados\n",
+      "  Usuários: 86\n",
+      "  Economia média: R$ 354.69/mês\n",
+      "  Economia total (cluster): R$ 30503.03/mês\n",
+      "  Range: R$ 145.51 - R$ 660.75\n",
       "\n",
       "Cluster 1: Em Alerta\n",
-      "  Usuários: 196\n",
-      "  Economia média: R$ 162.59/mês\n",
-      "  Economia total (cluster): R$ 31866.94/mês\n",
-      "  Range: R$ 75.90 - R$ 411.99\n",
+      "  Usuários: 228\n",
+      "  Economia média: R$ 160.42/mês\n",
+      "  Economia total (cluster): R$ 36575.24/mês\n",
+      "  Range: R$ 75.90 - R$ 275.04\n",
       "\n",
-      "Cluster 2: Endividados Moderados\n",
-      "  Usuários: 167\n",
-      "  Economia média: R$ 320.13/mês\n",
-      "  Economia total (cluster): R$ 53461.81/mês\n",
-      "  Range: R$ 170.20 - R$ 660.75\n",
+      "Cluster 2: Endividados Severos\n",
+      "  Usuários: 112\n",
+      "  Economia média: R$ 613.49/mês\n",
+      "  Economia total (cluster): R$ 68711.10/mês\n",
+      "  Range: R$ 304.20 - R$ 1431.23\n",
       "\n",
       "Cluster 3: Poupadores\n",
-      "  Usuários: 78\n",
-      "  Economia média: R$ 120.90/mês\n",
-      "  Economia total (cluster): R$ 9430.02/mês\n",
-      "  Range: R$ 60.67 - R$ 252.17\n"
+      "  Usuários: 74\n",
+      "  Economia média: R$ 123.29/mês\n",
+      "  Economia total (cluster): R$ 9123.66/mês\n",
+      "  Range: R$ 63.20 - R$ 252.17\n"
      ]
     }
    ],
@@ -826,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -838,9 +832,9 @@
       "IMPACTO TOTAL PROJETADO\n",
       "======================================================================\n",
       "\n",
-      "Economia mensal total (500 usuários): R$ 135,972.25\n",
-      "Economia anual total: R$ 1,631,667.00\n",
-      "Economia média por usuário: R$ 271.94/mês\n"
+      "Economia mensal total (500 usuários): R$ 144,913.03\n",
+      "Economia anual total: R$ 1,738,956.36\n",
+      "Economia média por usuário: R$ 289.83/mês\n"
      ]
     }
    ],
@@ -859,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
